src-errormsg/E13-InfixConfusion/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E13-InfixConfusion/Plinth.hs:29:15: error: [GHC-83865]
    • Couldn't match expected type ‘(Integer -> Integer -> Integer)
                                    -> t0 -> Integer’
                  with actual type ‘Integer’
    • The function ‘n’ is applied to two value arguments,
        but its type ‘Integer’ has none
      In the expression: n modulo 2
      In a case alternative: Amount n -> n modulo 2
   |
29 |   Amount n -> n modulo 2
   |               ^^^^^^^^^^
